src/cplusplus/examples/initialization.cpp
int main() {
    int i = 7.8;

    // error: narrowing conversion
    // int j{7.8};
}
